[package]
name = "mcp-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
## rmcp = { version = "0.1", features = ["server"] }
## or dev channel
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-io"] }
rmcp-macros = "0.1.5"
rust-mcp-transport = "=0.2.1"
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
# AWS SDK dependencies
aws-config = "0.56.1"
aws-sdk-s3 = "0.34.0"
aws-sdk-rds = "0.34.0"
aws-types = "0.56.1"

# PostgreSQL dependencies
tokio-postgres = "0.7.10"
postgres-types = "0.2.6"

[[bin]]
name = "calculator_server"
path = "src/calculator_server.rs"

[[bin]]
name = "rds_server"
path = "src/rds_server.rs"

[[bin]]
name = "s3_server"
path = "src/s3_server.rs"

[[bin]]
name = "postgresql_server"
path = "src/postgresql_server.rs"
